# VENA

./: .gitignore  CLAUDE.md  DECISIONS.md  README.md  pyproject.toml
.claude/: loginexa.yaml  server3.yaml  settings.json
.claude/hooks/: compact-context.sh
.claude/notes/: a.md  picasso_prelaunch_tasks.md
.claude/notes/article/: 00_HUB.md  01_paired_fidelity.md  02_cost_quality_pareto.md  03_generalization_ood.md  04_downstream_segmentation.md  05_vessel_spatial_residual.md  06_vena_ablations.md  07_vae_reconstruction_ceiling.md  08_enhancing_region_fidelity.md  09_shortcut_healthy_control.md  CONTRIBUTION.md
.claude/notes/augmentation_approach/: unrefined_proposal.md
.claude/notes/changes/: 2026-06-09_training-regime-overhaul.md  2026-06-22_s1_v3_model_implementation.md  decoder_perceptual_loss_s3.md  decoder_perceptual_loss_s3_analysis_2026-06-20.md
.claude/notes/data/: 2026-06-18_data_audit.md  2026-06-19_data_audit_v2.md  2026-06-22_v3_normalization_decision.md  brats_africa.md  cohorts.md  ivygap.md  lumiere.md
.claude/notes/foundations/: proposal_contrastive_loss.md
.claude/notes/prompts/: 00_ORCHESTRATION.md  01_SHARED_CONTRACTS.md  02_validation_core.md  03_paired_fidelity.md  04_spatial_residual.md  05_downstream_seg.md  06_brats_ped_backfill.md  HANDOFF.md
.claude/notes/review/: 2026-06-22_s1_v2_tumor_synthesis_failure_diagnosis.md
.claude/notes/runs/: 2026-06-07_22-09-05_s1_238cc6ba.md  2026-06-07_22-54-10_s2_eb714abc.md
.claude/notes/validation/: dit_3d.md  harmonisation_audit.py  lddpm_3d.md  literature.md  lpix2pix_3d.md  pgan_cgan.md  resvit.md  syndiff.md  t1c_rflow.md  validation_fairness.md  validation_proposal.md
.claude/rules/: coding-standards.md  extensibility.md  external-deps.md  h5-design-principles.md  model-coding-standards.md  preflight-pattern.md  training-stages.md
.claude/skills/add-dataset/: SKILL.md
.claude/skills/dl-scientist/: SKILL.md
.claude/skills/explore/: SKILL.md
.claude/skills/integrate-competitor/: SKILL.md
.claude/skills/lpl-journal/: SKILL.md
.claude/skills/orchestrate/: SKILL.md
.claude/skills/refactor/: SKILL.md
.claude/skills/server3/: SKILL.md
.claude/skills/test/: SKILL.md
checkpoints/: epoch=5-step=12-v1.ckpt  epoch=5-step=12-v2.ckpt  epoch=5-step=12-v3.ckpt  epoch=5-step=12.ckpt  epoch=8-step=18-v1.ckpt  epoch=8-step=18-v2.ckpt  epoch=8-step=18-v3.ckpt  epoch=8-step=18.ckpt
local_compare/: peft_lora_r16_vs_fft.md
local_compare/fft/: config.yaml  decision.json  env.txt  git_commit.txt  hostname.txt
local_compare/fft/metrics/: augmentations_per_epoch.csv  train_epoch.csv  train_step.csv  variants_per_epoch.csv
local_compare/peft/: config.original.yaml  config.yaml  decision.json  env.txt  git_commit.txt
local_compare/peft/metrics/: augmentations_per_epoch.csv  train_epoch.csv  train_step.csv  variants_per_epoch.csv
routines/cellularity_priors/: cli.py
routines/cellularity_priors/configs/: default.yaml
routines/cellularity_priors/engine/: cellularity_priors_engine.py
routines/competitors/: __init__.py
routines/competitors/dit_3d/: __init__.py  cli.py  engine.py  infer_cli.py
routines/competitors/lddpm_3d/: __init__.py  cli.py  engine.py  infer_cli.py
routines/competitors/lpix2pix_3d/: __init__.py  cli.py  engine.py  infer_cli.py
routines/competitors/pgan_cgan/: __init__.py  cli.py  engine.py  infer_cli.py
routines/competitors/resvit/: cli.py  engine.py  infer_cli.py
routines/competitors/syndiff/: __init__.py  cli.py  engine.py  infer_cli.py
routines/competitors/t1c_rflow/: __init__.py  cli.py  engine.py  infer_cli.py
routines/encode/: __init__.py
routines/encode/brain_to_latent/: __init__.py  cli.py  engine.py
routines/encode/maisi/: __init__.py  cli.py  engine.py  figures.py
routines/fm/: __init__.py
routines/fm/exhaustive_val/: __init__.py  cli.py  engine.py
routines/fm/inference/: __init__.py  cli.py  engine.py  exceptions.py  (+1 more)
routines/perfusion_priors/: cli.py
routines/preflights/: __init__.py
routines/preprocess/: __init__.py
routines/susceptibility_priors/: cli.py
routines/validation/: __init__.py
routines/vessel_priors/: cli.py
scratch/: 2026-06-01_s2_smoke_results.md
scratch/contrastive_lp/: lp_stability_probe.py
scripts/: audit_post_fix.py  bench_encode_aug.py  brain_latent_extract_patch.py  brain_latent_merge_patch.py  brain_mask_extract_patch.py  brain_mask_merge_patch.py  clean_brain_mask_inplace.py  compare_peft_vs_fft.py  figures_post_fix.py  gen_offline_aug_configs.py  harmonize_brain_source_inplace.py  merge_offline_aug_shards.py  normalize_splits_inplace.py  patch_v4_brain_latent.py  pin_latent_schema.py  prepare_rembrandt_source.sh  regen_aug_qc_figures.py  sync_aug_banks_to_picasso.sh  vena-fm-watch.sh
scripts/mask_audit/: README.md  array_mask_audit.sh  audit_cohort.py  flag_and_visualize.py
scripts/preprocess/: build_upenn_gbm_brats21_lookup.py
tests/cellularity_priors/: test_nawm_normalized_synthetic.py
tests/common/: test_decode_helpers.py
tests/competitors/: test_syndiff_fused_fallback.py
tests/data/: test_ucsf_pdgm_asl.py
tests/inference/: conftest.py  test_base.py  test_h5_schema_v2.py  test_h5_writer.py  test_harmonisation.py  test_identity_adapter.py  test_image_dataset.py  test_registry.py  test_vena_fm_adapter_state.py
tests/perfusion_priors/: test_alsop2015_synthetic.py
tests/segmentation/: test_config.py  test_registry.py
tests/susceptibility_priors/: test_magnitude_swan_synthetic.py
tests/validation/: __init__.py  conftest.py  test_artifacts.py  test_audit.py  test_downstream_seg.py  test_downstream_seg_engine.py  test_io.py  test_metrics_paired.py  test_paired_fidelity_engine.py  test_paired_fidelity_merge.py  test_paired_fidelity_report.py  test_preregister_engine.py  test_regions.py  test_registry.py  test_selection_nfe_symmetry.py  test_spatial_residual.py  test_spatial_residual_engine.py  test_stats.py  test_sweep_launcher_guards.py
tests/vessel_priors/: test_oof_synthetic.py
tools/probes/: lpl_composite_figure.py  lpl_decoder_vram_probe.py  lpl_feature_visualization.py
(+1047 files in other folders)
