[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# ----------------------------------------------------------------------------
# Project metadata
# ----------------------------------------------------------------------------
[project]
name = "vena"
version = "0.0.1"
description = "VENA: Vessel Encoded Neural Augmentation for Gadolinium-free T1 post-contrast synthesis"
readme = {text = "", content-type = "text/markdown"}
requires-python = ">=3.11"
license = {file = "LICENSE"}
keywords = [
]
authors = [
    {name = "Mario Pascual-González", email = "mpascual@uma.es"},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Image Processing",
]

# Runtime dependencies, declared per the libraries-first rule in
# .claude/rules/coding-standards.md item 6: declare HERE and `pip install -e .`
# in the `vena` env in the same commit. Torch is intentionally not pinned;
# select the CUDA wheel at install time (see Hardware notes below).
dependencies = [
    "numpy>=1.26,<2.2",
    "scipy>=1.11",
    "scikit-image>=0.22",
    "nibabel>=5.2",
    "SimpleITK>=2.3",
    "h5py>=3.10",
    "einops>=0.7",
    "omegaconf>=2.3",
    "pydantic>=2.6",
    "rich>=13.7",
    "matplotlib>=3.8",
    "pandas>=2.1",
    "monai[einops]>=1.4,<2.0",
    "PyYAML>=6.0",
    # TorchIO drives the offline image-domain augmentation bank
    # (Subject-level joint spatial transforms + physics-grounded
    # RandomBiasField / RandomMotion / RandomAnisotropy that MAISI's VAE
    # is not equivariant to). See routines/offline_aug/maisi/.
    "torchio>=0.19.6",
    # torchvision is required by the pGAN-cGAN competitor (Dar et al. 2019)
    # for its VGG16 perceptual loss. See routines/competitors/pgan_cgan/.
    # The wheel must match the installed torch's CUDA tag; pick at install
    # time via --extra-index-url like torch.
    "torchvision>=0.20",
    # Optimally Oriented Flux (Law & Chung 2008) is consumed through ITK +
    # ITK-TubeTK Python bindings. ITK ships the Hessian / oriented-flux
    # primitives; ITK-TubeTK adds the curated vessel-enhancement filters
    # validated on cerebrovascular data.
    "itk>=5.4",
    "itk-tubetk>=1.4",
    # Priors validation routine (priors_validation_protocol.md v0.1.2):
    # ANTsPy for atlas registration; nilearn / templateflow for atlas IO;
    # pingouin / statsmodels for ICC + multiple-comparisons; reportlab for
    # per-subject + cohort PDF reports; pyarrow for cohort_results.parquet;
    # joblib for per-subject parallelism.
    "antspyx>=0.4",
    "nilearn>=0.10",
    "templateflow>=24.0",
    "pingouin>=0.5",
    "statsmodels>=0.14",
    "reportlab>=4.0",
    "pyarrow>=14.0",
    "joblib>=1.3",
    # H5 splits routine: scikit-learn for StratifiedKFold / StratifiedShuffleSplit
    # in src/vena/data/h5/shared/splits.py — the standard implementation for
    # patient-level stratified cross-validation.
    "scikit-learn>=1.4",
    # Flow-matching training loop: PyTorch Lightning 2.x for the trainer skeleton,
    # callbacks (LR monitor, ModelCheckpoint), CSVLogger, and DDP. We deliberately
    # do not pin the minor version — only the APIs used (LightningModule,
    # LightningDataModule, Trainer.fit, CSVLogger) are stable across 2.x.
    "pytorch-lightning>=2.2,<3",
    # EMA with Karras-style warmup (Karras et al. 2024, arXiv:2312.02696). Single-file
    # implementation by lucidrains; supports inv_gamma/power scheduling natively. We
    # install with --no-deps on CUDA-pinned hosts to avoid disturbing torch.
    "ema-pytorch>=0.5",
    # PEFT (Hu et al. 2022, arXiv:2106.09685): LoRA / IA3 / DoRA adapters on the
    # MAISI rectified-flow trunk via ``peft.inject_adapter_in_model``. Wraps
    # nn.Linear in matched submodules with a low-rank update; zero-init B matrix
    # gives identity-at-init so joint ControlNet + LoRA training is stable.
    "peft>=0.10,<0.20",
    # PEFT 0.19 pulls transformers transitively but imports
    # ``transformers.BloomPreTrainedModel`` at import time, which was removed in
    # transformers 5.x. Pin to the last 4.x line so the import path resolves.
    "transformers>=4.40,<5",
]

[project.optional-dependencies]
# Tooling only — install with:
#   ~/.conda/envs/vena/bin/pip install -e ".[dev]"
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "pytest-cov>=4.1",
]
docs = []

# [project.urls] intentionally omitted; the project is not yet published. Local
# pointers live in CLAUDE.md (DECISIONS.md log, proposal at
# /media/mpascual/Sandisk2TB/research/vena/docs/proposal.md).

# ----------------------------------------------------------------------------
# Console scripts — forward declarations.
# Uncomment each line as the corresponding routine lands.
# Naming convention: vena-<bucket>-<name>  (see .claude/rules/preflight-pattern.md item 5)
# ----------------------------------------------------------------------------
[project.scripts]
vena-prior-maps-vessel = "routines.prior_maps.vessel_priors.cli:main"
vena-prior-maps-perfusion = "routines.prior_maps.perfusion_priors.cli:main"
vena-prior-maps-cellularity = "routines.prior_maps.cellularity_priors.cli:main"
vena-prior-maps-susceptibility = "routines.prior_maps.susceptibility_priors.cli:main"
vena-preflight-vessel-mask = "routines.preflights.vessel_mask.cli:main"
vena-preflight-priors-validation = "routines.preflights.priors_validation.cli:main"
vena-preflight-venous-atlas-build = "routines.preflights.venous_atlas_build.cli:main"
vena-preflight-latent-aug-equivariance = "routines.preflights.latent_aug_equivariance.cli:main"
vena-preflight-cohort-dedup = "routines.preflights.cohort_dedup.cli:main"
vena-h5-ucsf-pdgm-image = "routines.h5_datasets.ucsf_pdgm.cli:main"
vena-h5-brats-gli = "routines.h5_datasets.brats_gli.cli:main"
vena-h5-ivy-gap = "routines.h5_datasets.ivy_gap.cli:main"
vena-h5-brats-africa-glioma = "routines.h5_datasets.brats_africa_glioma.cli:main"
vena-h5-brats-africa-other = "routines.h5_datasets.brats_africa_other.cli:main"
vena-h5-lumiere = "routines.h5_datasets.lumiere.cli:main"
vena-h5-brats-ped = "routines.h5_datasets.brats_ped.cli:main"
vena-h5-rembrandt = "routines.h5_datasets.rembrandt.cli:main"
vena-h5-upenn-gbm = "routines.h5_datasets.upenn_gbm.cli:main"
vena-preprocess-brats-ped-skullstrip = "routines.preprocess.brats_ped_skullstrip.cli:main"
vena-preprocess-rembrandt-skullstrip = "routines.preprocess.rembrandt_skullstrip.cli:main"
vena-encode-maisi = "routines.encode.maisi.cli:main"
vena-encode-brain-to-latent = "routines.encode.brain_to_latent.cli:main"
vena-offline-aug-maisi = "routines.offline_aug.maisi.cli:main"
vena-merge-offline-aug = "scripts.merge_offline_aug_shards:main"
vena-fm-train = "routines.fm.train.cli:main"
vena-fm-exhaustive-val = "routines.fm.exhaustive_val.cli:main"
vena-fm-post-train = "routines.fm.post_train.cli:main"
vena-competitor-pgan = "routines.competitors.pgan_cgan.cli:main"
vena-competitor-pgan-infer = "routines.competitors.pgan_cgan.infer_cli:main"

# ----------------------------------------------------------------------------
# Setuptools layout — src/-layout for the library, flat-layout for routines/
# ----------------------------------------------------------------------------
[tool.setuptools.packages.find]
where = ["src", "."]
include = ["vena*", "routines*"]
exclude = ["tests*", "artifacts*", "docs*", ".claude*"]
namespaces = false

[tool.setuptools.package-data]
vena_fm = ["py.typed"]
"vena.model.autoencoder.maisi.configs" = ["*.json"]
"vena.model.fm.maisi.configs" = ["*.json"]

# ----------------------------------------------------------------------------
# Hardware / install notes (NOT pyproject keys; kept as a reference comment)
# ----------------------------------------------------------------------------
# CUDA wheel matrix:
#   Local RTX 4060 (driver 545+, CUDA 12.4):
#     pip install -e . --extra-index-url https://download.pytorch.org/whl/cu124
#   Local RTX 3060 (driver 535, CUDA 12.2):
#     pip install -e . --extra-index-url https://download.pytorch.org/whl/cu121
#   Picasso A100 inside NGC Singularity (torch already provided in image):
#     pip install -e . --no-deps   # then `pip install` non-torch deps individually
#   Picasso V100-DGXS (sm_70): pin `torch==2.4.1` from cu121; torch 2.5+ dropped
#     sm_70 from cu12 wheels.
# Do NOT hard-pin torch in [dependencies]; install-time wheel selection is the
# right place to enforce CUDA/driver matching.

# ----------------------------------------------------------------------------
# Ruff
# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "routines", "tests"]
extend-exclude = ["src/external", "artifacts"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import order)
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "NPY",  # numpy-specific
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line too long (formatter handles wrapping)
    "B008",  # function call in default argument (common in dataclass defaults)
    "RUF001",  # ambiguous unicode in string (we use σ, ×, → in scientific text)
    "RUF002",  # ambiguous unicode in docstring (same)
    "RUF003",  # ambiguous unicode in comment (same)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
"routines/**/cli.py" = ["T201"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ----------------------------------------------------------------------------
# Pytest
# ----------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short", "--strict-markers"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "unit: fast, no I/O, no GPU",
    "preflight_maisi: MAISI VAE audit components",
    "preflight_bsf: BrainSegFounder layer analysis components",
    "preflight_aug: augmentation pipeline components",
    "preflight_vessel: vessel-mask preflight components",
    "fm: flow-matching training/inference components",
    "repa: REPA loss / projection-head components",
    "gpu: requires CUDA",
    "slow: wall-clock > 30 s",
]

# ----------------------------------------------------------------------------
# Mypy
# ----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = false
follow_imports = "normal"
ignore_missing_imports = true
exclude = ["src/external/", "artifacts/"]

# External pretrained models lack type stubs upstream.
[[tool.mypy.overrides]]
module = [
    "torch.*",
    "monai.*",
    "nibabel.*",
    "SimpleITK.*",
    "h5py.*",
    "lpips.*",
    "piq.*",
    "skimage.*",
    "einops.*",
    "itk.*",
    "itk_tubetk.*",
]
ignore_missing_imports = true

[tool.pyright]
extraPaths = ["src", "routines"]